syntax = "proto3";

package abi;

message LoginRequest {
    string username = 1;
    string password = 2;
}

message Token {
    string data = 1;
}

message NewChatMessage {
    // unique room name (could be username or a group name or a comma separated list of usernames)
    string room = 1;
    string content = 2;
}

// empty 
message SendMessageResponse {}

// empty 
message GetMessagesRequest {}

message ChatMessage {
    string sender = 1;
    string room = 2;
    string content = 3;
    int64 timestamp = 4;
}

service Chat {
    // user login and get token 
    rpc Login(LoginRequest) returns (Token) {}
    // send message to a room
    rpc SendMessage(NewChatMessage) returns (SendMessageResponse) {}
    // subscribe and get all messages
    rpc GetMessages(GetMessagesRequest) returns (stream ChatMessage) {}
}